# portal

./: .gitignore  .pre-commit-config.yaml  README.md  disciplinas-cdia-2020.json  docusaurus.config.ts  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yaml
content/comunidade/: index.md  joao-pessoa.md
content/comunidade/alunos/: dispensa-e-reaproveitamento.md  estagio.md  index.md  tcc.md  trancamento.md
content/comunidade/alunos/biblioteca/: index.md
content/comunidade/alunos/feras/: index.md  recursos-essenciais.md
content/comunidade/alunos/matricula/: index.md
content/comunidade/alunos/outros/: index.md
content/comunidade/alunos/recursos/: email-academico.md  github-education.md  gmail.md  index.md  jetbrains.md  sigaa-institucional.md
content/comunidade/centro-de-informatica/: index.md  index.mdx
content/comunidade/centro-de-informatica/cursos/: _category_.json  cdia.md  index.md
content/disciplinas/: ID00000.md  index.md
content/guias/: index.md
convergencia/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
scripts/extrair_ementario_cdia/: cdia.py  requirements.txt
scripts/formatar_composicao_cdia/: index.mjs
scripts/fundir_ementario_e_composicao_cdia/: index.mjs
src/components/Hero/: HeroBullets.module.css  HeroBullets.tsx
src/components/MapasCI/: Nivel.tsx
src/pages/: fluxograma.tsx  index.tsx  planta.tsx
src/types/: common.ts
static/json/: disciplinas-cdia-2020.json  ppp-cdia-2020-composicao.json  ppp-cdia-2020-ementario.json
tests/: __init__.py
(+4 files in other folders)
